# Merilog

./: .gitignore  Cargo.toml  README.md
examples/: lex_process.rs  lex_struct.rs  main_test.sh  mis_example.rs  preprocessor_example.rs  test_llvm_ir.rs
examples/sources/: s1.ms  s10.ms  s11.ms  s12.ms  s13.ms  s14.ms  s15.ms  s16.ms  s17.ms  s18.ms  s19.ms  s2.ms  s20.ms  s21.ms  s22.ms  s23.ms  s24.ms  s25.ms  s26.ms  s27.ms  s28.ms  s29.ms  s3.ms  s30.ms  s31.ms  s32.ms  s33.ms  s34.ms  s35.ms  s36.ms  s37.ms  s4.ms  s5.ms  s6.ms  s7.ms  s8.ms  s9.ms
examples/tests/: test_serize.txt
src/: extern_feature.rs  lex.rs  lib.rs  main.rs  mistakes.rs  semantic.rs  syntax.rs  table.rs
src/extern_feature/: id_tree.rs
src/lex/: analysis.rs  preprocessor.rs
src/mistakes/: show.rs
src/semantic/: llvmir_gen.rs
src/syntax/: ll_parser.rs
src/table/: symbol.rs
